--- a/index.html
+++ b/index.html
@@ -61,6 +61,34 @@
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
               </div>
+              <p>Bootstrap</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+              </div>
+              <p>Ux Design</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+              </div>
+              <p>Python</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+              </div>
+              <p>PhP</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+              </div>
+              <p>Análise de Sistemas</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+              </div>
+              <p>Análise de Dados</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:55%">55%</div>
+              </div>
+              <p>MySQL</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+              </div>
               <br>
   
               <p class="w3-large w3-text-theme">
@@ -86,9 +114,9 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>Gostaria de trabalhar onde a minha experiência de 31 anos, possa contribuir com o
-              desenvolvimento da empresa, agregando valores e trocando informações que me permitam
-              aperfeiçoamento profissional, utilizando de minhas habilidades técnicas.</p>
+            <p>
+              Estou em busca de novas experiências e desafios, especialmente na área de desenvolvimento Front-End. No entanto, estou aberto a considerar outras oportunidades, desde que possa aplicar minha experiência e continuar a minha evolução profissional. Estou entusiasmado para contribuir e crescer em diferentes contextos, buscando constantemente aprimorar minhas habilidades e agregar valor onde quer que eu esteja.
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -96,21 +124,18 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Petrobras Biocombustível - Prestação de Serviços pela Kempetro Engenharia</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro de 2019 - <span class="w3-tag w3-teal w3-round">Aual</span></h6>
-              <p>Fiscal de campo de contrato; Função de líder de equipe no setor da balança e faturamento na usina de biodiesel em candeias; Faturamento de notas fiscais para expedição de B100 (Biodiesel) e produtos especiais; Tratamento 
-                das notas fiscais de matérias primas e insumos recebidos, entrada de mercadoria (MIGO) no 
-                sistema SAP/R3; Controle de entrada, saída e pesagem de carretas; Atuando na automatização de 
-                processos SAP-Excel; Executar serviços de apoio nas áreas de recursos de administração, 
-                finanças e logística; Atendimento de fornecedores e clientes interno e externo, fornecendo e 
-                recebendo informações sobre produtos e serviços; Tratamento de documentos variados, cumprindo 
-                todo o procedimento necessário referente aos mesmos; Arquivamento de documentos;</p>
+              <h5 class="w3-opacity"><b>Sesap-RN | Estagiário</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto de 2023 - Dezembro de 2023</h6>
+              <p>Durante o estágio eu pude auxiliar na coleta, análise e disseminação de dados estatísticos, auxiliar
+                na elaboração de padrões e fluxos de dados, contribuir positivamente no uso de software, auxiliar no aperfeiçoamento de rotinas existentes, auxiliar nos processos administrativos, e propor inovação tecnológica quando possível.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Teleperformance | Expert de Interação</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março de 2021 - Agosto de 2023</h6>
+              <p>Trabalhava no setor de suporte ao cliente, e com isso adiquiri a habilidade de me comunicar melhor com as pessoas
+                e solucionar problemas de forma eficiente e amigável.
+              </p>
             </div>
           </div>
   
@@ -120,23 +145,22 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Setembro de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
-                <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
-                <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
+                <li><a href="https://www.dio.me/certificate/7BFCF2E8/share" target="_blank">Curso: Formação UX Designer (30h)</a></li>
+                <li><a href="https://www.dio.me/certificate/A6FBEC50/share" target="_blank">Curso: Ciência de Dados com Python (89h)</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Centro Educacional Teodoro Sampaio</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1993 - 1995</h6>
-              <p>Técnico em Contabilidade</p>
+              <h5 class="w3-opacity"><b>Universidade Potiguar</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020 - 2023</h6>
+              <p>Sistemas de informação</p>
             </div>
           </div>
 
