--- a/index.html
+++ b/index.html
@@ -166,22 +166,15 @@
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos em destaque
             </h2>
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/Thiago-Alvees/Projeto-de-site-com-Crud" target="_blank">Site completo com tela de CRUD</a>
               </h6>
-              <p>TODO</p>
+              <p>Fiz este projeto para uma avaliação da faculdade, nesta avaliação era necessário criar uma aplicação web que tivesse api, e crud. Utilizei a api google maps.</p>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
-              </h6>
-              <p>TODO</p>
             </div>
           </div>
   
